task7 - dropdowns are created

--- a/lesson_7/task_7/index.html
+++ b/lesson_7/task_7/index.html
@@ -14,7 +14,7 @@
     </select>
 
     <select name="cities" id="cities"></select>
-    <p></p>
+    <div id="res"></div>
     <script src="task7.js"></script>
   </body>
 </html>
